Try to fix zooming when pressing select on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -291,6 +291,10 @@
   justify-content: center;
 }
 
+.Select {
+  font-size: 16px;
+}
+
 .Input {
   font-size: 16px;
   width: 100%;
